Fix alignment on tablet

--- a/assets/styles/pages/_homepage.scss
+++ b/assets/styles/pages/_homepage.scss
@@ -507,9 +507,13 @@ overflow: hidden;
     }
 
     .homepage-campaign-box {
-        width:50%;
+        width:100%;
         order: 3;
         overflow: hidden;
+    }
+
+    .homepage-news-list {
+        width: 100%;
     }
 
     .homepage-news-listing-item {
@@ -570,7 +574,7 @@ overflow: hidden;
 
     .homepage-lower-components-container {
         margin-top: 94px;
-        flex-wrap: nowrap;
+        flex-wrap: wrap;
     }
 
     .homepage-news-listing-item {
@@ -649,6 +653,18 @@ overflow: hidden;
     }
     .homepage-hero-capsule {
        margin-left: 32vw;
+    }
+
+    .homepage-lower-components-container {
+        flex-wrap: nowrap;
+    }
+
+    .homepage-campaign-box {
+        width: 50%;
+    }
+
+    .homepage-news-list {
+        width: 50%;
     }
 
 
